# http

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  README.md  beasthttp.cpp  beasthttp.h  boosthttpclient.cpp  boosthttpclient.h  http_connection.cpp  http_connection.h  main.cpp  message_validator.cpp  message_validator.h  path_address.h  path_parser.cc  path_parser.h  server.cc  server.h
.github/workflows/: codeql.yml
example/: CMakeLists.txt
example/server/: CMakeLists.txt  boost_multipart.cpp  boost_server_client.cpp  cpp_rest_server_client.cpp  main.cpp  web_socket.cpp
example/server_protobuf/: CMakeLists.txt  main.cpp  message_validator.h
example/server_protobuf/protos/: CMakeLists.txt  crosspoint.proto  protosfactory.cc
protos/: protosfactory.h
rest/include/rest/: client.h  server.h
rest/src/: path_address.cc  server.cc
src/: CMakeLists.txt
src/boost/: CMakeLists.txt
src/boost/include/boost/: http_connection.h
src/boost/src/: http_connection.cpp  server.cc
src/common/: messages_interface.h
src/path/: path_parser.h
src/rest/: CMakeLists.txt
src/rest/include/rest/: client.h  server.h
src/rest/src/: client.cc
src/rest_boost/: CMakeLists.txt
src/rest_boost/include/rest_boost/: client.h  http_connection.h  server.h  web_socket_server.h
src/rest_boost/src/: client.cc  http_connection.cc  server.cc  web_socket_server.cc
src/rest_common/: messages_interface.h
src/rest_cpp/: CMakeLists.txt
src/rest_cpp/include/rest/: client.h  server.h
src/rest_cpp/src/: client.cc  server.cc
src/rest_path/: CMakeLists.txt
src/rest_path/include/path/: path_address.h  path_parser.h
src/rest_path/src/: path_address.cc  path_parser.cc
